orange switcher ripple fix + cut off <br> block in color-line-text

--- a/src/css/components/colorLineText.styl
+++ b/src/css/components/colorLineText.styl
@@ -91,9 +91,9 @@
         background-color: transparent!important
         border-right-color transparent!important
 
-    br
-      @media (max-width: mobile-upper-limit)
-        display none
+    //br
+    //  @media (max-width: mobile-upper-limit)
+    //    display none
 
     .color-line--is-paragraph &
       border-radius 0 5px 0 0
