--- a/src/css/components/ripple.styl
+++ b/src/css/components/ripple.styl
@@ -76,7 +76,8 @@
   height 1px
   background-color b2c-purple
 
-  .{newAppName}-dark-theme &
+  .{newAppName}-dark-theme &,
+  .switch--orange &
     background-color b2c-orange
 
   top 25px !important
